medyo update na

--- a/bus/fivestar.html
+++ b/bus/fivestar.html
@@ -126,16 +126,14 @@
         <h2 class="title">CONTACT US</h2>
         <div class="contact-content">
           <div class="column left">
-            <div class="text">Contact Us</div>
+            <div class="contact_us">Contact Us</div>
             <p></p>
             <div class="icons">
               <div class="row">
                 <i class="fas fa-user"></i>
                 <div class="info">
-                  <div class="head">Names</div>
-                  <div class="sub-title">
-                    Krissha Mae Maramba & Jopher Joe Ribo
-                  </div>
+                  <div class="head">Company</div>
+                  <div class="sub-title">Dagupan Bus Company</div>
                 </div>
               </div>
               <div class="row">
@@ -143,7 +141,7 @@
                 <div class="info">
                   <div class="head">Address</div>
                   <div class="sub-title">
-                    278 Lasip Grande, Dagupan City, Pangasinan, Philippines
+                    Arellano St, Downtown District, Dagupan, 2400 Pangasinan
                   </div>
                 </div>
               </div>
@@ -151,9 +149,7 @@
                 <i class="fas fa-envelope"></i>
                 <div class="info">
                   <div class="head">Email</div>
-                  <div class="sub-title">
-                    krisshamamaramba@gmail.com josi.ribo.up@phinmaed.com
-                  </div>
+                  <div class="sub-title">dagupanbuscompany@gmail.com</div>
                 </div>
               </div>
             </div>
@@ -195,7 +191,7 @@
 
     <footer>
       <span
-        >Created By <a href="#">KRISSHA & JOPHER</a> |
+        >Created By <a href="#">Dagupan Bus Company</a> |
         <span class="far fa-copyright"></span> 2023 All rights reserved.</span
       >
     </footer>
