--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
                 <div class="info">
                   <div class="head">Address</div>
                   <div class="sub-title">
-                    278 Lasip Grande, Dagupan City, Pangasinan, Philippines
+                    Arellano St, Downtown District, Dagupan, 2400 Pangasinan
                   </div>
                 </div>
               </div>
