This is my frontend on my capstone

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
         <h2 class="title">SERVICES</h2>
         <div class="serv-content">
           <div class="card">
-            <a href  = "/bus/victoy.html" class = "victory">
+            <a href  = "/victory_liner/victory.html" class = "victory">
             <div class="box">
               <img src = "/img/victory.jpg" class = "image">
               <div class="text">VICTORY LINER</div>
@@ -96,7 +96,7 @@
         </a>
           </div>
           <div class="card">
-            <a href = "/bus/fivestar.html" class = "fivestar">
+            <a href = "/five_star/fivestar.html" class = "fivestar">
             <div class="box">
                 <img src="/img/fivestar.jpg" class="image">
               <div class="text">FIVE STAR</div>
